# lib/handlers/getBookEntries.js
@@ -1,12 +1,12 @@
 const Book = require('../../models/book');
-
+const { AleError, codes } = require('../errors');
 /**
  * Fetch the ledger
  *
  * GET: /books/{bookId}/ledger
  * 
  * path:
- *   bookId {string} The book to extract entries from.
+ *   bookId {integer} The book to extract entries from.
  *   
  * query:
  *   startDate {string} The start date for entries.
@@ -16,25 +16,34 @@ const Book = require('../../models/book');
  *   
  */
 exports.handler = function getBookEntries(req, res, next) {
-    const bookName = req.body.book;
     let startDate;
     let endDate;
-    Book.getBook(bookName).then(book => {
-        if (req.body.startDate) {
-            startDate = new Date(req.body.startDate);
+    let id = parseInt(req.params.bookId);
+    let bookInfo;
+    Book.findById(id).then(book => {
+        if (!book) {
+            throw new AleError(`Book with id ${id} does not exist`, codes.BookDoesNotExist);
         }
-        if (req.body.endDate) {
-            endDate = new Date(req.body.endDate);
+        if (req.query.startDate) {
+            startDate = new Date(req.query.startDate);
         }
-        return book.getLedger({startDate, endDate, page: req.body.page, perPage: req.body.perPage});
+        if (req.query.endDate) {
+            endDate = new Date(req.query.endDate);
+        }
+        bookInfo = book.values();
+        return book.getLedger({startDate, endDate, page: req.query.page, perPage: req.query.perPage});
     }).then(ledger => {
         const result = {
-            book: bookName,
+            book: bookInfo,
             startDate: startDate && startDate.valueOf(),
             endDate: endDate && endDate.valueOf(),
         };
-        result.entries = ledger;
-        res.json(result);
+        result.entries = ledger.map(e => {
+            const entry = e.values();
+            entry.transactions = e.transactions.map(tx => tx.values());
+            return entry;
+        });
+        return res.json(result);
     }).catch(err => {
         return next(err);
     });
